# livebox-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/livebox_mcp/: __init__.py  __main__.py  livebox_api.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_livebox_api.py  test_server.py  test_tools.py
